[fix] scroll overflow bug

--- a/src/app/pages/presentation-page/presentation-page.component.scss
+++ b/src/app/pages/presentation-page/presentation-page.component.scss
@@ -42,6 +42,10 @@
     user-select: none;
     cursor: default;
     z-index: 10;
+    pointer-events: none;
+    *{
+        pointer-events: auto;
+    }
     .page-number{
         position: absolute;
         right: 0;
