--- a/src/assets/themes/common.scss
+++ b/src/assets/themes/common.scss
@@ -1,4 +1,3 @@
-.markdown /deep/ table {
+.markdown .content /deep/ table {
     width: 100%;
-    overflow: auto;
 }
